--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,56 @@
-this is the header
+<!DOCTYPE html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8] -->
+<html lang="en">
+  <!-- <![endif] -->
+  <head>
+  <meta charset="utf-8" />
+  <!-- %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"} -->
+  <title>{{ page.title }}</title>
+  <meta content="El indultometro" name="description" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <link href="favicon.ico" rel="shortcut icon" />
+  <link href="images/apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114" />
+  <link href="images/apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72" />
+  <link href="images/apple-touch-icon-57x57-precomposed.png" rel="apple-touch-icon-precomposed" />
+  <link href="stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/responsive.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/theme.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/fonts.css" media="screen" rel="stylesheet" type="text/css" />
+</head>
+<body class="theme-pattern-concrete-wall">
+  <!-- Page Header -->
+  <header id="masthead">
+    <nav class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <h1 class="brand">
+            <a href="index.html">
+              El indultómetro
+              <i class="icon-beaker"></i>
+            </a>
+          </h1>
+          <div class="nav-collapse collapse">
+            <ul class="nav pull-right">
+              <li class="active"><a href="index.html">Inicio</a></li>
+              <li class=""><a href="indultos.html">10.000 indultos</a></li>
+              <li class=""><a href="famosos.html">Los más sonados</a></li>
+              <li class=""><a href="blog.html">Noticias</a></li>
+              <li class=""><a href="contact.html">¿Qué es esto?</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
