Add quite a few pages, quite complete site structure

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,17 +14,17 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link href="favicon.ico" rel="shortcut icon" />
-  <link href="images/apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114" />
-  <link href="images/apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72" />
-  <link href="images/apple-touch-icon-57x57-precomposed.png" rel="apple-touch-icon-precomposed" />
-  <link href="stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/responsive.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/theme.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/fonts.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/favicon.ico" rel="shortcut icon" />
+  <link href="/images/apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114" />
+  <link href="/images/apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72" />
+  <link href="/images/apple-touch-icon-57x57-precomposed.png" rel="apple-touch-icon-precomposed" />
+  <link href="/stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/responsive.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/theme.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/fonts.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
-<body class="theme-pattern-concrete-wall">
+<body class="theme-pattern-concrete-wall" {{ page.body-attributes }}>
   <!-- Page Header -->
   <header id="masthead">
     <nav class="navbar navbar-fixed-top">
@@ -36,18 +36,18 @@
             <span class="icon-bar"></span>
           </a>
           <h1 class="brand">
-            <a href="index.html">
+            <a href="/index.html">
               El indultómetro
-              <i class="icon-beaker"></i>
+              <i class="icon-legal"></i>
             </a>
           </h1>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right">
-              <li class="active"><a href="index.html">Inicio</a></li>
-              <li class=""><a href="indultos.html">10.000 indultos</a></li>
-              <li class=""><a href="famosos.html">Los más sonados</a></li>
-              <li class=""><a href="blog.html">Noticias</a></li>
-              <li class=""><a href="contact.html">¿Qué es esto?</a></li>
+              <li class="active"><a href="/index.html">Inicio</a></li>
+              <li class=""><a href="/indultos.html">10.000 indultos</a></li>
+              <li class=""><a href="/famosos.html">Los más sonados</a></li>
+              <li class=""><a href="/noticias.html">Noticias</a></li>
+              <li class=""><a href="/ayuda.html">¿Qué es esto?</a></li>
             </ul>
           </div>
         </div>
