--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,9 +47,9 @@
     </div>
   </div>
 </footer>
-<script src="javascripts/jquery.min.js" type="text/javascript"></script>
-<script src="javascripts/bootstrap.js" type="text/javascript"></script>
-<script src="javascripts/script.js" type="text/javascript"></script>
+<script src="/javascripts/jquery.min.js" type="text/javascript"></script>
+<script src="/javascripts/bootstrap.js" type="text/javascript"></script>
+<script src="/javascripts/script.js" type="text/javascript"></script>
 <script type="text/javascript">
 if (typeof gaJsHost == 'undefined') {
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
