--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -23,6 +23,10 @@
   <link href="/stylesheets/font-awesome.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/theme.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/fonts.css" media="screen" rel="stylesheet" type="text/css" />
+
+  <script src="/javascripts/jquery.min.js" type="text/javascript"></script>
+  <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
+  <script src="/javascripts/script.js" type="text/javascript"></script>
 </head>
 <body class="theme-pattern-concrete-wall" {{ page.body-attributes }}>
   <!-- Page Header -->
