--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -44,10 +44,10 @@
           </h1>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right">
-              <li class="active"><a href="/indultos.html">10.000 indultos</a></li>
-              <li class=""><a href="/famosos.html">Los más sonados</a></li>
-              <li class=""><a href="/noticias.html">Noticias</a></li>
-              <li class=""><a href="/ayuda.html">¿Qué es esto?</a></li>
+              <li class="{% if page.nav_section == 'all_pardons' %} active {% endif %}"><a href="/indultos.html">10.000 indultos</a></li>
+              <li class="{% if page.nav_section == 'main_pardons' %} active {% endif %}"><a href="/famosos.html">Los más sonados</a></li>
+              <li class="{% if page.nav_section == 'media' %} active {% endif %}"><a href="/noticias.html">Noticias</a></li>
+              <li class="{% if page.nav_section == 'help' %} active {% endif %}"><a href="/ayuda.html">¿Qué es esto?</a></li>
             </ul>
           </div>
         </div>
