--- a/web/_includes/footer.html
+++ b/web/_includes/footer.html
@@ -52,6 +52,7 @@
 <script src="/javascripts/script.js" type="text/javascript"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="/javascripts/URI.min.js" type="text/javascript"></script>
+<script src="/javascripts/footable-0.1.js" type="text/javascript"></script>
 <script type="text/javascript">$.each(q,function(i,f){$(f)})</script>
 <script type="text/javascript">
 if (typeof gaJsHost == 'undefined') {
