--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -24,6 +24,7 @@
   <link href="/stylesheets/theme.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/fonts.css" media="screen" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/custom.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/footable-0.1.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 <body class="theme-pattern-concrete-wall" {{ page.body-attributes }}>
   <!-- Page Header -->
