--- a/web/_layouts/post.html
+++ b/web/_layouts/post.html
@@ -1,11 +1,14 @@
+---
+nav_section: media
+---
+
 {% include header.html %}
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
   <div class="container">
-    <div class="hero-unit">
-      <h1>Noticias</h1>
-      <p>Thats a single post page view</p>
+    <div class="hero-sunit">
+      <h1><a href="/noticias.html">En los medios</a></h1>
     </div>
   </div>
 </section>
@@ -18,7 +21,6 @@
           <header class="blog-header">
             <h2>
               {{ page.title }}
-              <small>{{ page.date | localize: "%d de %B de %Y" }}</small>
             </h2>
           </header>
           <figure class="thumbnail-figure">
@@ -26,12 +28,18 @@
               <img alt="" src="{{ page.image }}" />
             </a>
             <figcaption class="thumbnail-title">
-              <h3>
-                <a href="{{ page.url }}"><span>{{ page.lead }}</span></a>
-              </h3>
+              <h5>
+                <a href="{{ page.url }}"><span>
+                por {{ page.author }},
+                {{ page.date | localize: "%d de %B de %Y" }}.
+                </span></a>
+              </h5>
             </figcaption>
           </figure>
-          {{ page.content }}
+          <div class="offset2">
+            <p><strong><big>{{ page.lead }}</big></strong></p>
+            {{ content }}
+          </div>
         </article>
       </div>
       <aside class="span3 sidebar">
