--- a/web/_includes/footer.html
+++ b/web/_includes/footer.html
@@ -25,7 +25,7 @@
       <div class="span4">
         <h3>El indultómetro</h3>
         <p>
-          Un proyecto de @dcabo y @jjelosua para Civio... Pilla el código aquí...
+          Un proyecto de Juan Elosua (@jjelosua) y David Cabo (@dcabo) para Civio... Con la ayuda de... Pilla el código aquí... 
         </p>
         </ul>
       </div>
@@ -38,7 +38,7 @@
               <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
             </h4>
             <p>
-              <small>{{ post.date | localize: "%d de %B de %Y" }}</small>
+              <small>{{ post.author }}. {{ post.date | localize: "%d de %B de %Y" }}</small>
             </p>
           </li>
           {% endfor %}
