--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -49,7 +49,7 @@
               <li class="{% if page.nav_section == 'all_pardons' %} active {% endif %}"><a href="/indultos.html">10.000 indultos</a></li>
               <li class="{% if page.nav_section == 'main_pardons' %} active {% endif %}"><a href="/famosos.html">Destacados</a></li>
               <li class="{% if page.nav_section == 'media' %} active {% endif %}"><a href="/noticias.html">En los medios</a></li>
-              <li class="{% if page.nav_section == 'help' %} active {% endif %}"><a href="/ayuda.html">¿Qué es esto?</a></li>
+              <li><a href="http://www.civio.es"><img src="/images/civio.png"></a></li>
             </ul>
           </div>
         </div>
