Added methodology to footer links

--- a/web/_includes/footer.html
+++ b/web/_includes/footer.html
@@ -28,10 +28,11 @@
           Un proyecto de Juan Elosua (@jjelosua) y David Cabo (@dcabo) para Civio.
         </p>
         <ul class="unstyled">
-          <li><a href="/api.html">Ayuda</a></li>
-          <li><a href="/api.html">Agradecimientos</a></li>
+          <li><a href="/ayuda.html">Ayuda</a></li>
+          <li><a href="/metodologia.html">¿Cómo se hizo?</a></li>
           <li><a href="/api.html">API</a></li>
           <li><a href="/api.html">Código Fuente</a></li>
+          <li><a href="/api.html">Agradecimientos</a></li>
         </ul>
       </div>
       <div class="span4">
