--- a/web/_includes/footer.html
+++ b/web/_includes/footer.html
@@ -54,6 +54,7 @@
   </div>
 </footer>
 <script src="/javascripts/jquery.min.js" type="text/javascript"></script>
+<script src="/javascripts/jquery.chosen.min.js" type="text/javascript"></script>
 <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
 <script src="/javascripts/script.js" type="text/javascript"></script>
 <script src="http://d3js.org/d3.v3.min.js"></script>
