Added jquery tax script to header

--- a/web/_includes/header.html
+++ b/web/_includes/header.html
@@ -54,3 +54,7 @@
       </div>
     </nav>
   </header>
+  <script type='text/javascript'>
+    // http://samsaffron.com/archive/2012/02/17/stop-paying-your-jquery-tax
+    window.q=[];window.$=function(f){q.push(f)}
+  </script>
