Translate sentence in english

--- a/web/_includes/latest_posts.html
+++ b/web/_includes/latest_posts.html
@@ -1,5 +1,5 @@
 <div class="sidebar-widget">
-  <h2 class="sidebar-header">Recent posts</h2>
+  <h2 class="sidebar-header">Entradas recientes</h2>
   <ul class="unstyled">
     {% for post in site.posts limit:10 %}
     <li>
