Added sharing util to post layout

--- a/web/_layouts/post.html
+++ b/web/_layouts/post.html
@@ -49,6 +49,8 @@ nav_section: media
       </aside>
     </div>
   </div>
+  {% include sharing.html %}
 </section>
 </div>
+
 {% include footer.html %}
