Fixed title and footer on posts

--- a/web/_includes/footer.html
+++ b/web/_includes/footer.html
@@ -34,7 +34,7 @@
         </ul>
       </div>
       <div class="span4">
-        <h3>En los medios</h3>
+        <h3>Artículos</h3>
         <ul class="unstyled">
           {% for post in site.posts limit:3 %}
           <li>
