--- a/web/_layouts/post.html
+++ b/web/_layouts/post.html
@@ -8,7 +8,7 @@ nav_section: media
 <section class="section alt" id="promo">
   <div class="container">
     <div class="hero-sunit">
-      <h1><a href="/noticias.html">En los medios</a></h1>
+      <h1><a href="/noticias.html">Artículos</a></h1>
     </div>
   </div>
 </section>
