Lead image in posts should not be a link to the post, useless

--- a/web/_layouts/post.html
+++ b/web/_layouts/post.html
@@ -24,9 +24,7 @@ nav_section: media
             </h2>
           </header>
           <figure class="thumbnail-figure">
-            <a href="{{ page.url }}">
-              <img alt="" src="{{ page.image }}" />
-            </a>
+            <img alt="" src="{{ page.image }}" style="opacity: 1 !important"/>
             <figcaption class="thumbnail-title">
               <h5>
                 <a href="{{ page.url }}"><span>
