--- a/web/_includes/footer.html
+++ b/web/_includes/footer.html
@@ -60,16 +60,6 @@
 <script src="/javascripts/footable-0.1.js" type="text/javascript"></script>
 <script src="/javascripts/footable.sortable.js" type="text/javascript"></script>
 <script type="text/javascript">$.each(q,function(i,f){$(f)})</script>
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-28946840-2']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
+{% include analytics.html %}
 </body>
 </html>
