--- a/web/_layouts/post.html
+++ b/web/_layouts/post.html
@@ -2,7 +2,9 @@
 nav_section: media
 ---
 
+{% include head.html %}
 {% include header.html %}
+
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
